Update dev script in package.json to clarify host configuration for Vite

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "vite build",
+    "dev": "vite --host 0.0.0.0",  // Allow access from any IP address 
+    "build": "vite build", 
     "preview": "vite preview"
   },
   "dependencies": {
