--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",  // Allow access from any IP address 
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build", 
     "preview": "vite preview"
   },
@@ -18,3 +18,4 @@
     "vite": "^5.0.8"
   }
 }
+
